# moodist

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  allgather.cc  allgather.h  allocator.cc  allocator.h  allocator_api.h  allocator_ipc.cc  allocator_wrapper.cc  alltoall.cc  async.cc  async.h  backend.h  buffer.h  clock.h  collective_base.h  common.h  commondefs.h  connection.cc  connection.h  cpu_allocator.cc  cpu_allocator.h  cputhread.cc  cputhread.h  cuda_copy.h  docker-build-wheels.sh  freelist.h  function.h  generate.py  group.cc  group.h  hash_map.h  ib_common.cc  ib_common.h  internal_allocator.cc  intrusive_list.h  ipc_mapper.cc  (+87 more)
.github/workflows/: build.yml
api/: allocator_api.h  api_handle.h  moodist_api.h  moodist_version.h  processgroup_api.h  serialize_api.h  store_api.h  tensor_ptr.h  types.h
benchmarks/: serialize.py
core/: allgather.cc  allocator.cc  alltoall.cc  buffer.h  buffer_api.cc  collective_base.h  common.h  commondefs.h  connection.cc  connection.h  cpu_allocator.cc  cputhread.cc  cputhread.h  cuda_loader.cc  cuda_loader.h  function.h  group.cc  group.h  hash_map.h  ib_common.cc  ipc_mapper.cc  ipc_mapper.h  kernels.cc  kernels.h  logging.h  moo_allocator_impl.h  moodist_api.cc  numa.cc  processgroup.cc  processgroup.h  processgroup_old.cc  processgroup_stubs.cc  queue.cc  queue.h  queue_internal.h  rdma.h  rdma_tcp.cc  serialization.h  serialize_object.cc  setup_comms.cc  (+8 more)
detect_abi/: CMakeLists.txt  detect.cc  pybind.cc
docs/: README.md
docs/api/: compile_op.md  queue.md  tcp_store.md
docs/internals/: queue.md  tcp_store.md
py/moodist/: __init__.py  _core.py  backend.py  compile.py
tests/: framework.py  run.py  test_allocator.py  test_compile_op.py  test_processgroup.py  test_queue.py  test_serialize.py  test_store.py  test_stress.py
wrapper/: allocator.h  allocator_wrapper.cc  backend.h  cpu_allocator_wrapper.cc  module.cc  moodist_loader.cc  moodist_loader.h  processgroup_wrapper.cc  processgroup_wrapper.h  pybind.cc  queue_wrapper.cc  serialize_wrapper.cc  serialize_wrapper.h  store.h  store_wrapper.cc  tensor_factory.h  torch_includes.h
wrapper/serialize/: buffer.h  serialization.h  serialize_object.cc
